--- a/Lab19 Oprosnik/View/AdminWindow.xaml
+++ b/Lab19 Oprosnik/View/AdminWindow.xaml
@@ -2,11 +2,14 @@
     x:Class="Lab19_Oprosnik.View.AdminWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:abstract="clr-namespace:Lab19_Oprosnik.Abstract"
     xmlns:convBinding="clr-namespace:Lab19_Oprosnik.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Lab19_Oprosnik.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:sur="clr-namespace:Lab19_Oprosnik.Surveys"
+    xmlns:vm="clr-namespace:Lab19_Oprosnik.ViewModels"
     Title="AdminWindow"
     Width="1000"
     Height="540"
@@ -18,7 +21,7 @@
                 <ResourceDictionary Source="../Resources/ResourcesAdmin.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <convBinding:VisibilityConverter x:Key="VisibilityConverter" />
-
+           
         </ResourceDictionary>
     </Window.Resources>
 
@@ -26,9 +29,8 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="70" />
-                <ColumnDefinition />
+                <ColumnDefinition  />
             </Grid.ColumnDefinitions>
-
             <StackPanel>
                 <StackPanel.Resources>
                     <Style x:Key="WrapImage" TargetType="RadioButton">
@@ -36,10 +38,10 @@
                             <Trigger Property="IsChecked" Value="False">
                                 <Setter Property="Opacity" Value="0.5" />
                                 <Setter Property="Background" Value="Transparent" />
-
                             </Trigger>
                             <Trigger Property="IsChecked" Value="True">
                                 <Setter Property="Background" Value="LightGreen" />
+                                <Setter Property="BorderBrush" Value="Green" />
                             </Trigger>
                         </Style.Triggers>
 
@@ -51,6 +53,7 @@
                                 <ControlTemplate x:Name="ControlTemplate" TargetType="RadioButton">
                                     <!--  Я НЕ СМОГ ОТПОЗИЦИОНИРОВАТЬ ТУЛЛТИП!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!  -->
                                     <Border
+                                        Name="Border"
                                         Margin="0,0,0,15"
                                         Background="{TemplateBinding Background}"
                                         BorderBrush="{TemplateBinding BorderBrush}"
@@ -63,7 +66,6 @@
                                         ToolTipService.VerticalOffset="-50">
                                         <Image Source="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" />
                                     </Border>
-
 
                                     <ControlTemplate.Triggers>
 
@@ -83,64 +85,189 @@
                             </Setter.Value>
                         </Setter>
                     </Style>
-
                 </StackPanel.Resources>
                 <ItemsControl>
                     <RadioButton
-                        Content="{StaticResource AddSurvay}"
-                        IsChecked="{Binding IsAddSurvay}"
+                        Command="{Binding ParceCurrentCommand}"
+                        CommandParameter="AddSurvey"
+                        Content="{StaticResource AddSurvey}"
+                        IsChecked="{Binding IsAddSurvey}"
                         Style="{StaticResource WrapImage}"
                         ToolTip="Добавление опроса" />
                     <RadioButton
+                        Command="{Binding ParceCurrentCommand}"
+                        CommandParameter="ChangeSurvey"
                         Content="{StaticResource ChangeSurvey}"
                         IsChecked="{Binding IsChangeSurvey}"
                         Style="{StaticResource WrapImage}"
                         ToolTip="Изменить опросы" />
                     <RadioButton
+                        Command="{Binding ParceCurrentCommand}"
+                        CommandParameter="AnalysisSurvey"
                         Content="{StaticResource AnalysisSurvey}"
                         IsChecked="{Binding IsAnalysisSurvey}"
+                        IsEnabled="False"
                         Style="{StaticResource WrapImage}"
                         ToolTip="Результаты опросов" />
                     <RadioButton
+                        Command="{Binding ParceCurrentCommand}"
+                        CommandParameter="JoinSurveyResults"
                         Content="{StaticResource JoinSurveyResults}"
                         IsChecked="{Binding IsJoinSurveyResults}"
+                        IsEnabled="False"
                         Style="{StaticResource WrapImage}"
                         ToolTip="Добавление результатов других опросов" />
                     <RadioButton
+                        Width="70"
+                        HorizontalAlignment="Right"
+                        Command="{Binding ParceCurrentCommand}"
+                        CommandParameter="AddAdmin"
                         Content="{StaticResource AddAdmin}"
                         IsChecked="{Binding IsAddAdmin}"
+                        IsEnabled="False"
                         Style="{StaticResource WrapImage}"
                         ToolTip="Добавление администратора" />
                     <RadioButton
+                        Command="{Binding ParceCurrentCommand}"
+                        CommandParameter="DeleteUser"
                         Content="{StaticResource DeleteUser}"
                         IsChecked="{Binding IsDeleteUser}"
                         Style="{StaticResource WrapImage}"
                         ToolTip="Удаление пользователя" />
-
                 </ItemsControl>
             </StackPanel>
-            <Grid Column="1" Visibility="{Binding IsAddSurvay,Converter={StaticResource VisibilityConverter}}" >
-                <Image Source="{StaticResource AddSurvay}"></Image>
-            </Grid>
-            <Grid Column="1" Visibility="{Binding IsChangeSurvey,Converter={StaticResource VisibilityConverter}}" >
-                <Image Source="{StaticResource ChangeSurvey}"></Image>
-            </Grid>
-            <Grid Column="1" Visibility="{Binding IsAnalysisSurvey,Converter={StaticResource VisibilityConverter}}" >
-                <Image Source="{StaticResource AnalysisSurvey}"></Image>
-            </Grid>
-            <Grid Column="1" Visibility="{Binding IsJoinSurveyResults,Converter={StaticResource VisibilityConverter}}" >
-                <Image Source="{StaticResource JoinSurveyResults}"></Image>
-            </Grid>
-            <Grid Column="1" Visibility="{Binding IsAddAdmin,Converter={StaticResource VisibilityConverter}}" >
-                <Image Source="{StaticResource AddAdmin}"></Image>
-            </Grid>
-            <Grid Column="1" Visibility="{Binding IsDeleteUser,Converter={StaticResource VisibilityConverter}}" >
-                <Image Source="{StaticResource DeleteUser}"></Image>
-            </Grid>
+            <Grid
+                Margin="10,0,10,0"
+                Column="1"
+                Visibility="{Binding IsAddSurvey, Converter={StaticResource VisibilityConverter}}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Border
+                    Grid.Row="0"
+                    BorderBrush="DarkGray"
+                    BorderThickness="0,0,0,1">
+                    <DockPanel HorizontalAlignment="Center" TextBlock.FontSize="15">
+                        <DockPanel.Resources>
+                            <Style TargetType="RadioButton">
+                                <Setter Property="BorderBrush" Value="Red" />
+                                <Setter Property="BorderThickness" Value="2" />
+                                <Setter Property="Margin" Value="5" />
+                            </Style>
+                        </DockPanel.Resources>
+                        <RadioButton
+                            Command="{Binding ParceCurrentCommand}"
+                            CommandParameter="ChooseOneElement"
+                            Content="Выбор только одного элемента"
+                            IsChecked="{Binding IsChooseOneElement}" />
 
+                        <RadioButton
+                            Command="{Binding ParceCurrentCommand}"
+                            CommandParameter="ChooseManyElement"
+                            Content="Выбор нескольких элементов"
+                            IsChecked="{Binding IsChooseManyElement}" />
 
+                        <RadioButton
+                            Command="{Binding ParceCurrentCommand}"
+                            CommandParameter="ChooseYesNo"
+                            Content="Да\Нет"
+                            IsChecked="{Binding IsChooseYesNo}"
+                            IsEnabled="False" />
+                    </DockPanel>
+                </Border>
+                <DockPanel
+                    Grid.Row="1"
+                    Margin="5"
+                    HorizontalAlignment="Center">
+                    <ToggleButton IsChecked="{Binding IsRelativeResults}" />
+                    <Label Content="Можно ли изменить результаты" />
+                </DockPanel>
 
-
+                <DockPanel Grid.Row="2">
+                    <Label Content="Название опроса: " FontSize="17" />
+                    <TextBox
+                        FontSize="20"
+                        Text="{Binding TitleSurvey}"
+                        TextAlignment="Center" />
+                </DockPanel>
+                <Grid Row="3">
+                    <Grid.Resources>
+                        <DataTemplate DataType="{x:Type sur:QuestionObject}">
+                            <DockPanel Margin="3">
+                                <Border Background="Linen" CornerRadius="10">
+                                    <Label
+                                        Width="auto"
+                                        Content="{Binding Path=Tag, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ItemsControl}}"
+                                        DataContext="{x:Type vm:AdminViewModel}" />
+                                </Border>
+                                <TextBox Text="{Binding Question}" />
+                            </DockPanel>
+                        </DataTemplate>
+                    </Grid.Resources>
+                    <ScrollViewer VerticalScrollBarVisibility="Auto">
+                        <ItemsControl ItemsSource="{Binding QuestionCollection}" Tag="Введите элемент">
+                            <ItemsControl.InputBindings>
+                                <KeyBinding Key="Enter" Command="{Binding AddNewTextBoxCommand}" />
+                            </ItemsControl.InputBindings>
+                        </ItemsControl>
+                    </ScrollViewer>
+                </Grid>
+            
+            <Grid Row="3" Visibility="{Binding IsChooseYesNo, Converter={StaticResource VisibilityConverter}}">
+                    <TextBox Text="3" />
+                </Grid>
+            
+                <Button
+                    Margin="5"
+                    Grid.Row="4"
+                    Command="{Binding AddSurveyCommand}"
+                    Content="Создать опрос" />
+            </Grid>
+            <Grid Margin="10 0 10 0" Column="1" Visibility="{Binding IsChangeSurvey, Converter={StaticResource VisibilityConverter}}">
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <TreeView Grid.Row="0" ItemsSource="{Binding Path=Surveys}">
+                    <TreeView.ItemTemplate>
+                        <HierarchicalDataTemplate DataType="{x:Type abstract:ISurvey}" ItemsSource="{Binding Path=QuestionsCollection}">
+                            <TextBlock FontSize="20" Text="{Binding Path=Title}" />
+                            <HierarchicalDataTemplate.ItemTemplate>
+                                <DataTemplate DataType="{x:Type sur:QuestionObject}">
+                                    <Border Background="AntiqueWhite" CornerRadius="10">
+                                        <TextBox Text="{Binding Question}" />
+                                    </Border>
+                                </DataTemplate>
+                            </HierarchicalDataTemplate.ItemTemplate>
+                        </HierarchicalDataTemplate>
+                    </TreeView.ItemTemplate>
+                </TreeView>
+                <Button Grid.Row="1" Margin="5" Content="Сохранить изменения" Command="{Binding SaveChangesSurCommand}"/>
+            </Grid>
+            <!--<Grid Column="1" Visibility="{Binding IsAnalysisSurvey, Converter={StaticResource VisibilityConverter}}">
+                <Image Source="{StaticResource AnalysisSurvey}" />
+            </Grid>
+            <Grid Column="1" Visibility="{Binding IsJoinSurveyResults, Converter={StaticResource VisibilityConverter}}">
+                <Image Source="{StaticResource JoinSurveyResults}" />
+            </Grid>
+            <Grid Column="1" Visibility="{Binding IsAddAdmin, Converter={StaticResource VisibilityConverter}}">
+                <Image Source="{StaticResource AddAdmin}" />
+            </Grid>-->
+            <Grid Column="1" Visibility="{Binding IsDeleteUser, Converter={StaticResource VisibilityConverter}}">
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                <StackPanel HorizontalAlignment="Center" Grid.Row="0">
+                    <Label FontSize="25"  Content="Введите email пользователя, которго нужно удалить:"></Label>
+                    <TextBox TextAlignment="Center" FontSize="30" Text="{Binding DeleteUserEmail}"></TextBox>
+                </StackPanel>
+                <Button Grid.Row="1" Margin="5" Content="Удалить пользователя" Command="{Binding DeleteUserCommand}"></Button>
+            </Grid>
         </Grid>
     </Window.Content>
 </Window>
