--- a/Lab19 Oprosnik/View/AdminWindow.xaml
+++ b/Lab19 Oprosnik/View/AdminWindow.xaml
@@ -21,7 +21,7 @@
                 <ResourceDictionary Source="../Resources/ResourcesAdmin.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <convBinding:VisibilityConverter x:Key="VisibilityConverter" />
-           
+            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         </ResourceDictionary>
     </Window.Resources>
 
@@ -29,7 +29,7 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="70" />
-                <ColumnDefinition  />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <StackPanel>
                 <StackPanel.Resources>
@@ -51,7 +51,6 @@
                             <Setter.Value>
 
                                 <ControlTemplate x:Name="ControlTemplate" TargetType="RadioButton">
-                                    <!--  Я НЕ СМОГ ОТПОЗИЦИОНИРОВАТЬ ТУЛЛТИП!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!  -->
                                     <Border
                                         Name="Border"
                                         Margin="0,0,0,15"
@@ -169,7 +168,8 @@
                             Command="{Binding ParceCurrentCommand}"
                             CommandParameter="ChooseManyElement"
                             Content="Выбор нескольких элементов"
-                            IsChecked="{Binding IsChooseManyElement}" />
+                            IsChecked="{Binding IsChooseManyElement}"
+                            IsEnabled="False" />
 
                         <RadioButton
                             Command="{Binding ParceCurrentCommand}"
@@ -216,21 +216,24 @@
                         </ItemsControl>
                     </ScrollViewer>
                 </Grid>
-            
-            <Grid Row="3" Visibility="{Binding IsChooseYesNo, Converter={StaticResource VisibilityConverter}}">
+
+                <Grid Row="3" Visibility="{Binding IsChooseYesNo, Converter={StaticResource VisibilityConverter}}">
                     <TextBox Text="3" />
                 </Grid>
-            
+
                 <Button
-                    Margin="5"
                     Grid.Row="4"
+                    Margin="5"
                     Command="{Binding AddSurveyCommand}"
                     Content="Создать опрос" />
             </Grid>
-            <Grid Margin="10 0 10 0" Column="1" Visibility="{Binding IsChangeSurvey, Converter={StaticResource VisibilityConverter}}">
+            <Grid
+                Margin="10,0,10,0"
+                Column="1"
+                Visibility="{Binding IsChangeSurvey, Converter={StaticResource VisibilityConverter}}">
                 <Grid.RowDefinitions>
                     <RowDefinition />
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <TreeView Grid.Row="0" ItemsSource="{Binding Path=Surveys}">
                     <TreeView.ItemTemplate>
@@ -246,7 +249,11 @@
                         </HierarchicalDataTemplate>
                     </TreeView.ItemTemplate>
                 </TreeView>
-                <Button Grid.Row="1" Margin="5" Content="Сохранить изменения" Command="{Binding SaveChangesSurCommand}"/>
+                <Button
+                    Grid.Row="1"
+                    Margin="5"
+                    Command="{Binding SaveChangesSurCommand}"
+                    Content="Сохранить изменения" />
             </Grid>
             <!--<Grid Column="1" Visibility="{Binding IsAnalysisSurvey, Converter={StaticResource VisibilityConverter}}">
                 <Image Source="{StaticResource AnalysisSurvey}" />
@@ -259,14 +266,21 @@
             </Grid>-->
             <Grid Column="1" Visibility="{Binding IsDeleteUser, Converter={StaticResource VisibilityConverter}}">
                 <Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <StackPanel HorizontalAlignment="Center" Grid.Row="0">
-                    <Label FontSize="25"  Content="Введите email пользователя, которго нужно удалить:"></Label>
-                    <TextBox TextAlignment="Center" FontSize="30" Text="{Binding DeleteUserEmail}"></TextBox>
+                <StackPanel Grid.Row="0" HorizontalAlignment="Center">
+                    <Label Content="Введите email пользователя, которго нужно удалить:" FontSize="25" />
+                    <TextBox
+                        FontSize="30"
+                        Text="{Binding DeleteUserEmail}"
+                        TextAlignment="Center" />
                 </StackPanel>
-                <Button Grid.Row="1" Margin="5" Content="Удалить пользователя" Command="{Binding DeleteUserCommand}"></Button>
+                <Button
+                    Grid.Row="1"
+                    Margin="5"
+                    Command="{Binding DeleteUserCommand}"
+                    Content="Удалить пользователя" />
             </Grid>
         </Grid>
     </Window.Content>
