--- a/Lab19 Oprosnik/View/MainWindow.xaml
+++ b/Lab19 Oprosnik/View/MainWindow.xaml
@@ -1,12 +1,123 @@
-﻿<Window x:Class="Lab19_Oprosnik.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Lab19_Oprosnik"
-        mc:Ignorable="d"
-        Icon="{StaticResource SurveyIcon}"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-    </Grid>
+﻿<Window
+    x:Class="Lab19_Oprosnik.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:abstract="clr-namespace:Lab19_Oprosnik.Abstract"
+    xmlns:converters="clr-namespace:Lab19_Oprosnik.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Lab19_Oprosnik"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:sur="clr-namespace:Lab19_Oprosnik.Surveys"
+    Title="MainWindow"
+    Width="700"
+    Height="700"
+    Icon="{StaticResource SurveyIcon}"
+    mc:Ignorable="d">
+
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        <converters:VisibilityConverter x:Key="VisibilityConverter" />
+
+        <DataTemplate DataType="{x:Type sur:ChooseOneSurvey}">
+
+            <ItemsControl Background="Orange" ItemsSource="{Binding QuestionsCollection}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate DataType="{x:Type sur:QuestionObject}">
+                        <RadioButton Background="Yellow" Content="{Binding Question}" />
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type sur:ChooseManySurvey}">
+            <ItemsControl Background="Purple" ItemsSource="{Binding QuestionsCollection}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate DataType="{x:Type sur:QuestionObject}">
+                        <CheckBox Background="Blue" Content="{Binding Question}" />
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </DataTemplate>
+
+        <Style TargetType="ToggleButton">
+            <Style.Triggers>
+                <Trigger Property="IsChecked" Value="False">
+                    <Setter Property="Opacity" Value="0.5" />
+                    <Setter Property="Background" Value="Transparent" />
+                </Trigger>
+                <Trigger Property="IsChecked" Value="True">
+                    <Setter Property="Background" Value="LightGreen" />
+                    <Setter Property="BorderBrush" Value="Green" />
+                </Trigger>
+            </Style.Triggers>
+            <Setter Property="BorderThickness" Value="2" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ToggleButton">
+                        <Border
+                            Name="Border"
+                            Height="50"
+                            Margin="0,0,0,15"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            CornerRadius="10"
+                            Cursor="Hand">
+                            <TextBlock
+                                VerticalAlignment="Center"
+                                Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}"
+                                TextAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+    <Window.Content>
+        <Grid Margin="5">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Border Background="MediumPurple" CornerRadius="20">
+                <DockPanel>
+
+                    <Label Content="Вы вошли как:" FontSize="15" />
+                    <Label
+                        Content="{Binding CurrentUserName}"
+                        FontFamily="Alias"
+                        FontSize="20" />
+                </DockPanel>
+            </Border>
+            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+                <ItemsControl ItemsSource="{Binding Path=Surveys}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate DataType="{x:Type sur:ChooseOneSurvey}">
+                            <StackPanel>
+                                <ToggleButton
+                                    Name="ToggleButton"
+                                    Content="{Binding Title}"
+                                    IsChecked="False" />
+                                <ListBox
+                                    ItemsSource="{Binding QuestionsCollection}"
+                                    SelectionMode="Single"
+                                    Visibility="{Binding IsChecked, ElementName=ToggleButton, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                    <ListBox.ItemTemplate>
+                                        <DataTemplate DataType="{x:Type sur:QuestionObject}">
+                                            <ListBoxItem Content="{Binding Question}" IsSelected="{Binding IsChecked}" />
+                                        </DataTemplate>
+                                    </ListBox.ItemTemplate>
+                                </ListBox>
+                                <Button
+                                    Command="{Binding SaveAllSurveyCommand}"
+                                    Content="Сохранить результаты"
+                                    Visibility="{Binding IsChecked, ElementName=ToggleButton, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
+        </Grid>
+    </Window.Content>
 </Window>
